--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>My Landing Page</title>
 </head>
 <body>
-    
+    <ul class="navbar">
+        <div class="left">
+            <li>Header Logo</li>
+        </div>
+        <div class="right">
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </div>
+    </ul>
 </body>
 </html>
