--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>My Landing Page</title>
 </head>
 <body>
+    
     <ul class="navbar">
         <div class="left">
             <li>Header Logo</li>
@@ -18,5 +19,19 @@
             <li>header link three</li>
         </div>
     </ul>
+
+    <div class="hero">
+        <div class="hero-left">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title.
+                It's a smaller font and the color is lower contrast.</p>
+            <button>Sign up</button>
+        </div>
+        <div class="hero-right">
+            <p>This is a placeholcer for an image</p>
+        </div>
+    </div>
+
+
 </body>
 </html>
