--- a/index.html
+++ b/index.html
@@ -58,7 +58,17 @@
     </div>
 
     <div class="quote-section">
+        <div class="quote">
+            <em>This is an inspiring quote, or a testimonial from a customer.
+            Maybe it's just filling up space, or maybe people will actually
+            read it. Who knows? All I know is that it looks nice.</em>
+        </div>
+        <div class="author">-Thor, God of Thunder</div>
 
+    </div>
+
+    <div class="call-to-action">
+        <div class="cta-box">Call to action! It's time!</div>
     </div>
    
 
