--- a/index.html
+++ b/index.html
@@ -67,8 +67,16 @@
 
     </div>
 
-    <div class="call-to-action">
-        <div class="cta-box">Call to action! It's time!</div>
+    <div class="last-div">
+        <div class="cta-box">
+            <div class="blue-left">
+                <h4></h4>
+                <p></p>
+            </div>
+            <div class="blue-right">
+                <button></button>
+            </div>
+        </div>
     </div>
    
 
