--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p></p>
             </div>
             <div class="blue-right">
-                <button></button>
+                <button type="button" class="button">Sign up!</button>
             </div>
         </div>
     </div>
