blue call to aciton div

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <div class="last-div">
         <div class="cta-box">
             <div class="blue-left">
-                <h4></h4>
-                <p></p>
+                <h4>Call to action! It's time!</h4>
+                <p class="blue-p">Sign up for our product by clicking the button right over there!</p>
             </div>
             <div class="blue-right">
                 <button type="button" class="button">Sign up!</button>
